--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/zibarnumaldamax/redux-basket.git",
+  "homepage": "https://github.com/zibarnumaldamax/redux-basket/tree/main/public",
   "name": "redux-basket",
   "version": "0.1.0",
   "private": true,
