--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://zibarnumaldamax.github.io/redux-basket/",
+  "homepage": "http://zibarnumaldamax.github.io/redux-basket/",
   "name": "redux-basket",
   "version": "0.1.0",
   "private": false,
